--- a/src/components/banner/Banner.module.scss
+++ b/src/components/banner/Banner.module.scss
@@ -1,5 +1,8 @@
 .banner {
+  margin-top: 4px;
 display: flex;
 align-items: center;
 justify-content: center;
+background-color: aqua;
+padding: 4px;
 }
