--- a/src/components/randomPhoto/RandomPhoto.module.scss
+++ b/src/components/randomPhoto/RandomPhoto.module.scss
@@ -1,12 +1,16 @@
 .btn-random{
-  margin-top: 4px;
+  margin-top: 8px;
   padding: 2px 4px;
   background-color: rgb(38, 38, 145);
   color: #fff;
   border-radius: 4px;
-
+  font-size: 2rem;
   &:hover{
     opacity: 0.7;
     cursor: pointer;
   }
+}
+
+.pic {
+  margin-top: 10px;
 }
