--- a/src/features/photo/pages/main/MainPage.module.scss
+++ b/src/features/photo/pages/main/MainPage.module.scss
@@ -17,4 +17,30 @@
     cursor: pointer;
   }
 
+  &-disabled {
+    text-decoration: none;
+    width: 160px;
+    padding: 4px 6px;
+    background-color: gray;
+    color: #fff;
+    border-radius: 4px;
+    border: none;
+    font-size: large;
+    pointer-events: none;
+  }
+
+}
+
+.album{
+  margin-top: 20px;
+  color: aquamarine;
+  text-align: center;
+  font-size: 2.6rem;
+
+  &-not{
+    margin-top: 20px;
+  color: rgb(14, 121, 85);
+  text-align: center;
+  font-size: 2.6rem;
+  }
 }
