--- a/src/features/user/pages/signUp/SignUp.module.scss
+++ b/src/features/user/pages/signUp/SignUp.module.scss
@@ -16,12 +16,30 @@
     width: 300px;
     display: flex;
     justify-content: space-between;
+    position: relative;
+    
+    &-label{
+      position: absolute;
+      top: -10px ;
+      right: -20px;
+      font-size: 1.6rem;
+      color: rgb(54, 153, 54);
+    }
   }
   &-input2{
     margin-top: 20px;
     width: 300px;
     display: flex;
     justify-content: space-between;
+    position: relative;
+
+    &-label{
+      position: absolute;
+      top: -10px ;
+      right: -20px;
+      font-size: 1.6rem;
+      color: rgb(54, 153, 54);
+    }
   }
 
 
